--- a/chrome-extension/env.json.example
+++ b/chrome-extension/env.json.example
@@ -1,5 +1,4 @@
 {
   "SUPABASE_URL": "https://your-project-id.supabase.co",
-  "SUPABASE_ANON_KEY": "your-supabase-anon-key",
-  "API_BASE_URL": "https://your-api-gateway-url.amazonaws.com"
+  "SUPABASE_ANON_KEY": "your-supabase-anon-key"
 } 
